--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -8,33 +8,18 @@
     </head>
     <body>
         <header>
-            <h1>Data Ingest, Load and Analysis</h1>
+            <h1>Data Engineering Tutorial - Analysis</h1>
         </header>
         <main>
             <hr>
             <section>
-                <h2>Introduction</h2>
+                <h2>Data Source</h2>
                 <p>
-                    To find datasets that I could use for my demo data engineering project,
-                    I started with a simple Google search and found <a href="https://www.springboard.com/blog/free-public-data-sets-data-science-project/">this</a> blog post among several useful hits.
-                </p>
-                <p>
-                    Of the datasets described in the blog post, I picked Walmart Recruiting Store Sales data.
-                    Some of the reasons for picking this dataset are:
-                </p>
-                <ul>
-                    <li>retail data, easy to understand domain</li>
-                    <li>this data is hosted on Kaggle, very good description of data is provided by Kaggle</li>
-                </ul>
+                    Data used for this tutorial is the Walmart Recruiting Store Sales data.
                 </p>
                 <p>
                     Source data located <a href="https://www.kaggle.com/c/walmart-recruiting-store-sales-forecasting">here</a>.
                 </p>
-            </section>
-            <hr>
-            <section>
-                <h2>Schema Design</h2>
-                <h3>Data Summary</h3>
                 <p>
                     The data provided is historical sales data for 45 Walmart stores for years
                     2010 thru 2012.
@@ -46,106 +31,35 @@
                     holidays are considered: Super Bowl, Labor Day, Thanksgiving and
                     Christmas.
                 </p>
-                <p>
-                    In addition, "features" data is provides information such as temperature
-                    in the region, fuel price and markdowns etc.
-                </p>
-                <p>
-                    Of the files available from the data source, I used the following files for this
-                    data engineering project:
-                </p>
-                <ul>
-                    <li>train.csv</li>
-                    <li>features.csv</li>
-                </ul>
 
-                <h3>Schema</h3>
+            </section>
+            <hr>
+            <section>
+                <h2>Schema Design</h2>
                 <p>
                     Applying dimensional design process on the data yields one dimension
-                    and two fact tables. The tables and their fields are listed below:
+                    and two fact tables:
                 </p>
                 <ul>
-                    <li>date dimension
-                        <ul>
-                            <li>Id (PK)</li>
-                            <li>Date</li>
-                            <li>Is Holiday</li>
-                            <li>Holiday Name</li>
-                        </ul>
-                    </li>
-                    <li>sales fact
-                        <ul>
-                            <li>Store (PK)</li>
-                            <li>Dept (PK)</li>
-                            <li>Date Key (PK)</li>
-                            <li>Weekly Sales</li>
-                        </ul>
-                    </li>
-                    <li>features fact
-                        <ul>
-                            <li>Store (PK)</li>
-                            <li>Date Key (PK)</li>
-                            <li>Temperature</li>
-                            <li>Fuel Price</li>
-                            <li>Markdown 1</li>
-                            <li>Markdown 2</li>
-                            <li>Markdown 3</li>
-                            <li>Markdown 4</li>
-                            <li>Markdown 5</li>
-                            <li>CPI</li>
-                            <li>Unemployment</li>
-                        </ul>
-                    </li>
+                    <li>date dimension</li>
+                    <li>sales fact</li>
+                    <li>features fact</li>
                 </ul>
             </section>
             <hr>
             <section>
                 <h2>Data Cleaning and Preparation</h2>
                 <p>
-                    I picked <a href="https://www.stitchdata.com/">Stitch</a> as the ETL
-                    tool for this project (I describe the process of selecting the ETL tool
-                    in the next section).
+                    <a href="https://www.stitchdata.com/">Stitch</a> ETL tool is used
+                    to load data into data warehouse.
                 </p>
                 <p>
-                    In this section, I describe the cleaning and prepration I performed while
-                    creating each of the dimension and fact CSV files. Because the ETL tool that
-                    I picked is a sync-only tool, I had to perform cleaning of certain data
-                    items that would otherwise be performed by the ETL tool (I found Stitch to
-                    be great even with this limitation).
+                    Cleaning and prepration is done while creating each of the
+                    dimension and fact CSV files.
                 </p>
-                <ul>
-                    <li>Date dimension CSV file generation
-                        <ul>
-                            <li>extract only Date and isHoliday columns from the source sales data</li>
-                            <li>sort on Date field and output only unique rows</li>
-                            <li>data for few of the weeks in not available for the years 2010 and 2012.
-                                Add rows for 2010 and 2012 dates that are missing from data</li>
-                            <li>insert holiday_name field into data for appropriate rows</li>
-                            <li>add sequence data as first column, this will serve as primary key of
-                                the dimension table created from the CSV file</li>
-                        </ul>
-                    </li>
-                    <li>Sales fact CSV file generation
-                        <ul>
-                            <li>delete IsHoliday field</li>
-                            <li>replace "Date" field with "Date Key" foreign key, lookup date
-                                key from date dimension created above</li>
-                        </ul>
-                    </li>
-                    <li>Features fact CSV file generation
-                        <ul>
-                            <li>features data contains "NA" for missing data values, since these
-                                items are numeric, I convert them to 0.0</li>
-                            <li>delete IsHoliday field</li>
-                            <li>similar to what was done for sales fact generation, replace
-                                "Date" field with "Date Key" foreign key</li>
-                        </ul>
-                    </li>
-                </ul>
-                <h3>Implementation</h3>
                 <p>
-                    I implemented data cleaning and prepartion using AWS Lambda functions. I
-                    upload the source data files to AWS S3 and the Lambda functions download
+                    Data cleaning and prepartion scripts are implemented as AWS Lambda
+                    functions. Source data files to AWS S3 and the Lambda functions download
                     the source data files, clean and prepare CSV files containing dimension
                     & fact data and store the generated files back to S3.
                 </p>
@@ -164,62 +78,15 @@
                 <h2>Data Load</h2>
                 <h3>ETL Tool</h3>
                 <p>
-                    Stitch is used as ETL tool (<a href="https://www.stitchdata.com/">link</a>).
+                    ETL tool used is Stitch (<a href="https://www.stitchdata.com/">link</a>).
                 </p>
                 <p>
                     Stitch is a sync-only provider. Stitch tool does not provide any
                     transform ability.
                 </p>
-                <p>
-                    Why Stitch
-                </p>
-                <ul>
-                    <li>offers a free plan. The only cloud-based ETL tool I found that offers a free plan.</li>
-                    <li>Once I started using Stitch, I found the service to be execellent.
-                        The free account allows only one destination to be added. This was
-                        adequate for my needs.</li>
-                </ul>
-                <p>
-                    Setting up data source in Stitch
-                </p>
-                <ul>
-                    <li>as mentioned above, after the cleaning and preparation step, the
-                        cleaned data files are uploaded to S3</li>
-                    <li>Stitch provides the ability to use many different types of sources,
-                    CSV files stored on AWS S3 is one of the supported sources.</li>
-                    <li>On starting a new integration, I first pick an integration name</li>
-                    <li>this is used as the schema name in the postgres database</li>
-                    <li>next, I select AWS S3 CSV integration from the list of integrations
-                        presented. Next, I type in my S3 bucket name and file name</li>
-                    <li>grant access to S3 bucket. Directs me to create an IAM role,
-                        provides details such as AWS account id, role name, role
-                        policy to use for creating the IAM role</li>
-                    <li>setup CSV files to table name mapping</li>
-                    <li>setup integration frequency. Since this project needs just one-time
-                        load of data, I pick the default (30 minute) interval. Stitch
-                        starts the first load within minutes of setting up the integration.
-                        After data load is complete, I turn off the integration.</li>
-                </ul>
-                <p>
-                    Setting up destination in Stitch
-                </p>
-                <ul>
-                    <li>as mentioned above, Stitch free plan allows only one destination to
-                        be setup</li>
-                    <li>on the user interface for setting up the destination, I pick PostgreSQL
-                        as the destination type</li>
-                    <li>on picking PostgreSQL, I enter details such as RDS host endpoint, port,
-                        username, password and database name</li>
-                    <li>the interface provides a list of IP address and directs me to whitelist
-                        these IP addresses on my RDS instance</li>
-                    <li>after entering all details, Stitch checks if it can connect to the
-                        database and if successful, creates the destination</li>
-                </ul>
                 <h3>Data Warehouse</h3>
                 <p>
-                    Data loaded into an AWS RDS PostgreSQL instance. The data is organized
-                    as a star schema. The Stitch tool creates the dimension and fact tables
-                    in the PostgreSQL instance.
+                    Data loaded into an AWS RDS PostgreSQL instance.
                 </p>
             </section>
             <hr>
