--- a/app/dataeng_01.html
+++ b/app/dataeng_01.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1>Data Pipeline Tutorial - Demo</h1>
+            <h1>Data Pipeline Demo Project</h1>
         </header>
         <main>
             <hr>
